--- a/frontend/login.html
+++ b/frontend/login.html
@@ -27,6 +27,10 @@
                 <button type="submit" class="btn btn-primary" style="width: 100%;">Login</button>
             </form>
             
+            <p class="text-center mt-2">
+                Don't have an account? <a href="/register.html">Register here</a>
+            </p>
+            
             <div class="text-center mt-3">
                 <p style="color: #7f8c8d; font-size: 0.875rem;">
                     Default credentials: admin / admin123
