Scratchpad resize options

--- a/frontend/create-ticket.html
+++ b/frontend/create-ticket.html
@@ -93,7 +93,10 @@
         <div class="modal-content resizable-modal" id="scratchpadModalContent">
             <div class="modal-header">
                 <h2>Scratchpad</h2>
-                <button id="closeScratchpadBtn" class="btn btn-small btn-secondary">✕ Close</button>
+                <div class="flex gap-1">
+                    <button id="maximizeScratchpadBtn" class="btn btn-small btn-secondary" title="Maximize/Restore">⛶</button>
+                    <button id="closeScratchpadBtn" class="btn btn-small btn-secondary">✕ Close</button>
+                </div>
             </div>
             <div class="modal-body">
                 <!-- Formatting toolbar -->
